--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-bbody {
+body {
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	background: url("../images/crystalbackground.jpg");
 }
